# StellaAi

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test.py  test2.py  test3.py
CustomLibs/: GoogleGeminiNew.py  GoogleGenAIStudio.py  InputFieldText.py
MyQtWidgets/: untitled.ui
