[project]
name = "stellaai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ahk-binary==2023.9.0",
    "ahk==1.8.0",
    "better-exceptions==0.3.3",
    "google-generativeai==0.8.3",
    "pyautogui==0.9.54",
    "pyside6==6.8.1",
    "python-dotenv==1.0.1",
    "python-gemini-api==2.4.12",
    "requests==2.32.3",
    "uiautomation==2.0.20",
    "pywin32>=308",
]
